# calculations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pi.cpp  sample.cpp  tests.cpp
include/: long_arithmetic.h
src/: addition.cpp  assign_operators.cpp  constructors.cpp  division.cpp  is_zero.cpp  literal.cpp  methods.cpp  multiplication.cpp  operators.cpp  subtraction.cpp  to_string.cpp  unary_minus.cpp
